# AIC-Challenge-2025-

./: README.md
aic-data-prepare-main/: .envrc  .gitignore  embeddings.py  pyproject.toml  sql_ingestion.py  vecdb_ingestion.py
aic-main/: .gitmodules  compose.yml  nginx.conf
